made changes in index file for SEO

--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/brainwave-symbol.svg" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brainwave</title>
+
+  <title>Brainwave - Unlock the Power of AI & Innovation</title>
+
+  <meta name="description"
+    content="Brainwave: The ultimate platform for AI, machine learning, innovation, automation, neural networks, and cutting-edge technology. Stay ahead with AI-driven solutions, tutorials, research, and advanced tech trends." />
+  <meta name="keywords"
+    content="AI, artificial intelligence, machine learning, deep learning, neural networks, automation, innovation, future technology, data science, AI-driven solutions, computer vision, natural language processing, big data, robotics, tech trends, smart automation, AI research, cloud computing, edge AI, AI algorithms, Brainwave AI, artificial general intelligence (AGI)" />
+  <meta name="author" content="Brainwave Team" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph (OG) Tags for Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Brainwave - AI, Machine Learning, Innovation & Future Tech Solutions" />
+  <meta property="og:description"
+    content="Brainwave: Your ultimate destination for AI-driven solutions, automation, neural networks, and cutting-edge technology. Stay ahead with research, projects, and expert insights." />
+  <meta property="og:image" content="https://brainwave-in.web.app/brainwave-symbol.svg" />
+  <meta property="og:url" content="https://brainwave-in.web.app/" />
+  <meta property="og:site_name" content="Brainwave" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Brainwave - AI, Machine Learning, Innovation & Future Tech Solutions" />
+  <meta name="twitter:description"
+    content="Brainwave: Explore AI-driven innovations, automation, and deep learning solutions shaping the future of technology." />
+  <meta name="twitter:image" content="https://brainwave-in.web.app/brainwave-symbol.svg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/public/brainwave-symbol.svg" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://brainwave-in.web.app/" />
+
+  <!-- Structured Data (JSON-LD for SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Brainwave",
+    "url": "https://brainwave-in.web.app/",
+    "description": "Brainwave: The hub for AI, deep learning, automation, and cutting-edge technology trends. Stay updated with AI-driven projects and expert insights.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Brainwave",
+      "logo": "https://brainwave-in.web.app/brainwave-symbol.svg"
+    },
+    "keywords": [
+      "AI", "artificial intelligence", "machine learning", "deep learning", "automation", 
+      "neural networks", "data science", "AI-driven solutions", "cloud computing", "AI algorithms", 
+      "computer vision", "big data", "robotics", "AI research", "smart automation", "edge AI"
+    ]
+  }
+  </script>
+
 </head>
 
 <body>
